fixed overflow content on wiki page

--- a/lms/static/sass/blocks/_wiki.scss
+++ b/lms/static/sass/blocks/_wiki.scss
@@ -62,3 +62,8 @@
 		}
 	}
 }
+
+.CodeMirror-scroll {
+	max-width: 100%;
+	box-sizing: border-box;
+}
